# Text_to_scenegraph_data_annotation

./: .gitignore  72-1_output_sample.rar  EVALUATION_INTEGRATION_GUIDE.md  README.md  dataset.csv  formatted_test_output.csv  input.csv  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_evaluation.py  test_gt_data.json  test_output.csv  test_pred_data.json  test_single_row.csv  unmarked_dataset.csv  unmarked_dataset.csv.backup_20250912_095833  unmarked_dataset.csv.backup_20250912_105931  unmarked_dataset.csv.backup_20250912_114902  unmarked_dataset.csv.backup_20250912_115457  unmarked_dataset.csv.backup_20250912_115501
72-1_output_sample/72-1_output_sample/: scene_graph_samples.json  text_samples.json
backend/: app.py  csv_handler.py  evaluator.py  requirements.txt
docs/: README.md  api_reference.md  migration_guide.md  usage_examples.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  style.css
scripts/: .env  README.md  data_annotation_formatter.py  deepseek_v3_scenegraph_generator.py  example.env  extract_input.py  fix_csv_multiline_json.py  gemini_2.0_flash_scenegraph_generator.py  simple_generator.py  text_color_enrichment.py  tool.md
src/text2sg/: __init__.py  __main__.py  models.py
src/text2sg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/text2sg/cli/: __init__.py  main.py
src/text2sg/config/: __init__.py  logging_config.py  settings.py
src/text2sg/core/: exceptions.py  models.py
src/text2sg/io/: __init__.py  csv_io.py  validators.py
src/text2sg/providers/: __init__.py  base.py  deepseek.py  gemini.py  ollama.py
src/text2sg/services/: __init__.py  color_enricher.py  extractor.py  fixer.py  formatter.py  pipeline.py
tests/: __init__.py  conftest.py
tests/test_cli/: test_main.py
tests/test_core/: test_models.py
tests/test_services/: __init__.py  test_extractor.py  test_fixer.py  test_formatter.py  test_pipeline.py
